# mpyez

./: .gitignore  .pylintrc  .tokeignore  LICENSE  MANIFEST.in  README.md  do_tests.sh  environment.yaml  pyproject.toml  requirements.txt  run_all_sh.sh  setup.cfg  setup.py
.github/workflow/: branch_dev.yml
.github/workflows/: branch_dev.yml  build_test.yml  codeql-analysis.yml  main_dev.yml  python-publish.yml
ezPy/: __init__.py  ez_list.py  ez_os.py  file_handling.py
ezPy/super_classes/ez_os_/: get_files.py
ezPy/utilities/ez_os/: errors.py
shell_scripts/: linting.sh
src/: __init__.py  testing.py
src/ezPy/: __init__.py  ez_list.py  ez_misc.py  ez_os.py  ez_read_files.py
src/ezPy/utilities/: __init__.py
src/ezPy/utilities/ez_list/: __init__.py  errors.py  misc.py  utilities.py
src/ezPy/utilities/ez_os/: __init__.py  get_files.py
src/ezPy/utilities/ez_read_files/: __init__.py  misc.py
src/mpyez/: __init__.py  dict_.py  ezArray.py  ezDict.py  ezIO.py  ezList.py  ezMultiprocessing.py  ezOS.py  ezPlotting.py  list_.py  misc.py  multiprocessing_.py  numpy_1d_.py  os_.py  plotting_.py  read_files.py  version.py
src/mpyez/backend/: __init__.py  eIO.py  eList.py  eOS.py  ePlotting.py  uDict.py  uIO.py  uList.py  uOS.py  uPlotting.py
src/mpyez/utilities/dict_/: __init__.py  utilities.py
src/mpyez/utilities/ez_list/: __init__.py  utilities.py
src/mpyez/utilities/ez_os/: __init__.py  get_files.py
src/mpyez/utilities/list_/: __init__.py  errors.py  utilities.py
src/mpyez/utilities/os_/: __init__.py  errors.py  utilities.py
src/mpyez/utilities/read_files/: __init__.py  errors.py  utilities.py
src/tests/: __init__.py  test_ez_list.py  test_list_.py
