[metadata]
name = ezPy
version = 0.1.0
url = https://github.com/syedalimohsinbukhari/ezPy
author = Syed Ali Mohsin Bukhari, Astrophysics and Python
author_email = syedali.b@outlook.com, astrophysicsandpython@gmail.com
license = MIT
license_files = LICENSE
description = Common use utilities for python done easy.
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
package_dir =
    = src

packages = find:
python_requires = ">= 3.7.*, <3.11.*"

;install_requires =
;    astropy~=4.3.1
;    numpy~=1.21.6
;    setuptools~=59.6.0
;    pillow~=9.1.1

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
